--- a/content/support/contracts/bronze.slim
+++ b/content/support/contracts/bronze.slim
@@ -29,6 +29,9 @@ h1 Support Contracts
         .span4
           == partial(:purchase_button, {locals: p})
     .row-fluid
+      == partial(:details, {locals: {contract: SupportContracts.new.bronze}})
+  /
+    .row-fluid
       - short_features.each_slice((short_features.length/2.0).ceil) do | c |
         .span6: h3: ul.icons-ul
           - c.each do | f |
@@ -53,4 +56,4 @@ h1 Support Contracts
           p
             | #{f[:description]}
 
-    == partial(:details, {locals: {contract: SupportContracts.new.bronze}})
+    
