--- a/content/support/contracts/index.slim
+++ b/content/support/contracts/index.slim
@@ -23,11 +23,11 @@ h1 Support Contracts
       markdown: 
         In thirty minutes, we will help you design the ideal architecture to ensure you meet your performance, quality, scalability, and cost goals. 
 
-        Maintenance is included; free software upgrades for the duration of the contract. **Includes a permanent Elite license which does NOT expire with your contract.**
+        Maintenance is included: free software upgrades for the duration of the contract. **Includes a permanent Elite license which does NOT expire with your contract.**
 
         1 designated individual gets 1 free priority support incident per month. 
 
-        Elite: $849. Elite+6 Month Bronze: $949. Do the math. 
+        Only $100 more than an Elite license alone.
 
   .span4
     .well
@@ -36,11 +36,11 @@ h1 Support Contracts
       p align="right"
         a.btn.btn-primary href="contracts/silver"
           | Details &raquo;
-      p
-      | Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes unlimited support incidents to your entire organization, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
-      p
-      | We'll also give you serious preventative help - 2 free hours of architecture consulting and up to 6 free hours of custom development are included, to ensure that 3am call never happens.
-      p &nbsp;
+      markdown:
+        Deploy to production with confidence, knowing we're only a phone call away if something goes wrong. Includes **unlimited support incidents to your entire organization**, with a 2 business-hour response time. Got a 3am disaster? 1 free emergency support incident is included per year.
+        
+        Millions of daily visitors. Terabytes of images. Complex workflows. Leverage our expertise and ensure your architecture will **stay** secure and performant in the real world. Hours of consulting and custom development are included.
+      
   .span4
     .well
       p: a href="contracts/gold"
@@ -48,10 +48,15 @@ h1 Support Contracts
       p align="right"
         a.btn.btn-primary href="contracts/gold"
           | Details &raquo;
-      p
-      | Unlimited emergency support incidents across your organization. Hot-fixes delivered within 2 business days. Up to 20 free hours of custom development, and 5 hours of preventative consulting. We know how to scale to hundreds of terabytes of images and keep your sites running smooth.
+      markdown:
+        **Unlimited *emergency* support incidents across your organization. Hot-fixes delivered within 2 business days.** 
+
+        **Up to 20 free hours of custom development and 10 hours of preventative consulting are included.**
+
+
       p &nbsp;
 
 h2 Purchase Orders and Invoices
-p You may request an invoice by e-mailing sales@imageresizing.net with your company name and billing address.
+markdown:
+  You may request an invoice for any support contract by e-mailing **sales@imageresizing.net** with your company name, contact information, and company billing address.
 
