--- a/content/support/contracts/silver.slim
+++ b/content/support/contracts/silver.slim
@@ -37,7 +37,7 @@ h1 Support Contracts
   .span8
     p: img src="/img/contracts/contract-hero-silver.png"
     .row-fluid
-      == partial(:details, {locals: {contract: SupportContracts.new.silver}})
+      == partial(:details, {locals: {contract: SupportTier.silver}})
 
 /
     p &nbsp;
