--- a/content/support/contracts/compare.slim
+++ b/content/support/contracts/compare.slim
@@ -7,14 +7,14 @@ h1 Support Contracts
 
 ruby:
   def render_prices(table, length)
-    table.map{|t|t[:lengths].find{|l| l[:months] == length}}.map do |prod|
-      price = prod && prod[:price_usd] ? "$%.0f USD" % prod[:price_usd] : nil
+    table.map{|t|t.lengths.find{|l| l.support_months == length}}.map do |prod|
+      price = prod && prod.price_usd ? "$%.0f USD" % prod.price_usd : nil
       "<td>#{price}</td>"
     end * "\n"
   end
 
   def render_values(table, subkey, &block)
-    table.map{|t|t[subkey]}.map do |value|
+    table.map{|t|t.send(subkey)}.map do |value|
       text = value ? ((value.respond_to?(:infinite?) && value.infinite?) ? 'unlimited' : block.call(value)) : nil
       "<td>#{text}</td>"
     end.join("\n")
@@ -38,7 +38,7 @@ ruby:
     end
   end 
 
-- col = [SupportContracts.new.elite, SupportContracts.new.bronze, SupportContracts.new.silver, SupportContracts.new.gold]
+- col = [SupportTier.elite, SupportTier.bronze, SupportTier.silver, SupportTier.gold]
 .row
   .span12
     p &nbsp;
@@ -50,13 +50,13 @@ ruby:
           th
           - col.each do |tier|
             th.features-masthead 
-              == tier[:name]
+              == tier.name
       tbody
         tr
           td.features-subhead
           - col.each do |tier|
             td
-              == tier[:target]
+              == tier.target_customer
         tr
           td.features-subhead 6 Months
           == render_prices(col, 6)
@@ -77,7 +77,7 @@ ruby:
           == render_checkmarks(col, :lifetime_license)
         tr
           td.features-subhead Major upgrades during subscription
-          == render_checkmarks(col, :upgrades)
+          == render_checkmarks(col, :major_upgrades)
         tr
           td.features-subhead Early access to new plugins and releases
           == render_checkmarks(col, :early_access)
@@ -86,7 +86,7 @@ ruby:
           td colspan="4"
         tr
           th Email Support
-          td colspan="4"
+          == render_checkmarks(col, :email_support)
         tr
           td.features-subhead Support via StackOverflow
           == render_checkmarks(col, :so_support)
