--- a/content/support/contracts/gold.slim
+++ b/content/support/contracts/gold.slim
@@ -28,7 +28,7 @@ h1 Support Contracts
       - purchase_options.flatten.each do | p |
         .span4
           == partial(:purchase_button, {locals: p})
-    == partial(:details, {locals: {contract: SupportContracts.new.gold}})
+    == partial(:details, {locals: {contract: SupportTier.gold}})
   /    
     .row-fluid
       - short_features.each_slice((short_features.length/2.0).ceil) do | c |
@@ -51,4 +51,4 @@ h1 Support Contracts
             | #{f[:description]}
 
 
-    == partial(:details, {locals: {contract: SupportContracts.new.gold}})
+    == partial(:details, {locals: {contract: SupportTier.new.gold}})
