--- a/content/support/contracts/gold.slim
+++ b/content/support/contracts/gold.slim
@@ -21,10 +21,12 @@ h1 Support Contracts
 
 - purchase_options = [{:product_value => 'Gold Tier 6 Month Contract', :button_text => '&nbsp;$6000/6 months &raquo;'}, {:product_value => 'Gold Tier 1 Year Contract', :button_text => '&nbsp;$10000/yr &raquo;'}, {:product_value => 'Gold Tier 2 Year Contract', :button_text => '&nbsp;$8500/yr with 2 year plan &raquo;'}]
 
+
+
 .row
   .span8
     p: img src="/img/contracts/contract-hero-gold-alt.png"
-    .row-fluid
+    /.row-fluid
       - purchase_options.flatten.each do | p |
         .span4
           == partial(:purchase_button, {locals: p})
