--- a/content/support/contracts/details.slim
+++ b/content/support/contracts/details.slim
@@ -52,46 +52,48 @@ ruby:
     - if contract.lifetime_license && contract.major_upgrades
       markdown:
        This support contract includes a permanent, [Enterprise-wide Elite license](/licenses/elite). You will be able to continue using the product after your subscription expires. While your support contract is active, you will receive free upgrades to all software included in your license. Major releases published *after* your contract expires are *not* included.
+
+       Features include:
     
 
     - if contract.response_2
       markdown:
-        Maximum email/phone response time: **2 business hours**. 
+        -Maximum email/phone response time in **2 business hours**. 
     - elsif contract.response_24
       markdown:
-        Maximum email/phone response time: **24 business hours**. 
+        -Maximum email/phone response time in **24 business hours**. 
 
 
     - if contract.hotfix_2
       markdown: 
-        Hotfixes provided within **2 business days**
+        -Hotfixes provided within **2 business days**
     - elsif contract.hotfix_7
       markdown:
-        Hotfixes provided within **7 business days**
+        -Hotfixes provided within **7 business days**
 
 
     - if contract.contacts == Float::INFINITY
       markdown:
-        All employees within your organization have access to our development team via email, phone, TeamViewer, or StackOverflow. 
+        -All employees within your organization have access to our development team via email, phone, TeamViewer, or StackOverflow. 
     - elsif contract.contacts == 1
       markdown:
-        1 designated point-of-contact at your organization has access to our development team via email, phone, TeamViewer, or StackOverflow. You may not change the designated point of contact after the first support incident.
+        -1 designated point-of-contact at your organization has access to our development team via email, phone, TeamViewer, or StackOverflow. You may not change the designated point of contact after the first support incident.
 
     - if contract.support_incidents_mo > 0 && contract.support_incidents_mo < Float::INFINITY
       markdown:
-        This support contract includes #{contract.support_incidents_mo} support incidents per month. Unused support incidents do *not* roll over to the following month. 
+        -This support contract includes #{contract.support_incidents_mo} support incident per month. Unused support incidents do *not* roll over to the following month. 
 
     - if contract.support_incidents_mo == Float::INFINITY
       markdown:
-        Employees and contractors working for your organization have access to unlimited priority email, phone, and screen-sharing support incidents.
+       -Employees and contractors working for your organization have access to unlimited priority email, phone, and screen-sharing support incidents.
 
     - if !contract.emergency_incidents_yr.nil? && contract.emergency_incidents_yr > 0 && contract.emergency_incidents_yr < Float::INFINITY
       markdown:
-        This support contract includes #{contract.emergency_incidents_yr} emergency support incidents per year. Unused emergency incidents roll over to the next year (and contract), as long as the contract is continually renewed on time.
+        -This support contract includes #{contract.emergency_incidents_yr} emergency support incident per year. Unused emergency incidents roll over to the next year (and contract), as long as the contract is continually renewed on time.
 
     - if contract.emergency_incidents_yr == Float::INFINITY
       markdown:
-        Employees and contractors working for your organization have access to unlimited emergency email, phone, and screen-sharing support incidents.
+        - Employees and contractors working for your organization have access to unlimited emergency email, phone, and screen-sharing support incidents.
 
 
 
@@ -147,8 +149,8 @@ ruby:
       4. Priority support requests submitted late on a Friday may not be answered until the following Monday.
       5. Support services are not available until payment clears, regardless of other billing terms.
       6. We reserve the right to cancel and pro-rata refund any support contract (we've never had to do this).
-      7. Our international development team works in both European and U.S. time zones; posted business hours may change due to developer availability, 
-      8. Hotfix response times are relative to identification of the issue, not to the beginning of the diagnostic process (which is generally only a few hours). Some flaws may be outside our direct control, such as in third-party or operating-system components, and workarounds may not always be possible within the normal time frame. We endeavor to always exceed the speed of our posted response times, but these times are not absolute guarantees. If at any time you feel we are not meeting your quality expectations, you can request a prorated refund. All services are provided on a best-effort basis, and do not consitutue a legal warranty or guarantee of any kind; please consult the [Enterprise license for details](/licenses/enterprise.
+      7. Our international development team works in both European and U.S. time zones; posted business hours may change due to developer availability. 
+      8. Hotfix response times are relative to identification of the issue, not to the beginning of the diagnostic process (which is generally only a few hours). Some flaws may be outside of our direct control, such as in third-party or operating-system components, and workarounds may not always be possible within the given time frame. We always endeavor to exceed the speed of our posted response times, but these times are not absolute guarantees. If at any time you feel we are not meeting your quality expectations, you can request a prorated refund. All services are provided on a best-effort basis, and do not consitutue a legal warranty or guarantee of any kind; please consult the [Enterprise license for details](/licenses/enterprise).
       9. Additional emergency support incidents may purchased for $3,500 each. By contacting emergency support outside of business hours, you agree to either debit your quota of emergency support incidents or pay separately for the utilized incident. It is your responsibility to verify you have remaining emergency support incidents prior to using the emergency hotline. 
       10. Separately purchased emergency or priority support incidents are not subject to the same initial response time. 
 
