Fixed a bug with the code section under "For Nuget Users," fixed a few typos.

--- a/content/docs/install/index.slim
+++ b/content/docs/install/index.slim
@@ -5,10 +5,12 @@ h1 Install ImageResizer in 3-4 easy steps
 .title: h2 Targeted Guides
 .row
   .span3
-    h2 For NuGet users
+    h2 For NuGet Users
 
-    code Install-Package ImageResizer.MvcWebConfig
-    p For more details, click "NuGet Installation Guide" below
+    code Install-Package
+    markdown:
+    code ImageResizer.MvcWebConfig
+    p For more details, click "NuGet Installation Guide" below.
 
   .span3
     h2 For IIS Administrators
@@ -22,10 +24,10 @@ h1 Install ImageResizer in 3-4 easy steps
 
 .row
   .span3
-    h2 For Classic ASP users
+    h2 For Classic ASP Users
     markdown:
       If you're using the URL API, standard installation is fine, and you can [follow the IIS administrator guide](/docs/install/administrators).
-      If you want to use the COM API (boo!), [see the COM Installation Guide](/docs/install/com).
+      If you want to use the COM API, [see the COM Installation Guide](/docs/install/com).
 
   .span3
     h2 For PHP, Ruby, and Python
