Remove links to /history

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -33,7 +33,7 @@ Layout: false
       .span4
         h3 About
         markdown:
-          ImageResizer is the result of [6 years of continual refinement](/history), with a focus on security, stability, and image quality. Thousands of popular websites rely on ImageResizer; some with millions of pageviews each day, like [Sierra Trading Post, MSN, and eBay](/testimonials).
+          ImageResizer is the result of 7 years of continual refinement, with a focus on security, stability, and image quality. Thousands of popular websites rely on ImageResizer; some with millions of pageviews each day, like [Sierra Trading Post, MSN, and eBay](/testimonials).
 
           It provides far more than image resizing; [with our 40+ plugins](/plugins), it becomes a **comprehensive media processing suite**.
 
