Correct confusing use of 'priority support' term. Explain scheduling restrictions on a-la-carte support.

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -5,102 +5,106 @@ Icon: envelope
 h1 Support
 
 .well
-	== partial :support_times
+  == partial :support_times
 
 .row
-	.span6
-		h2 Before you contact us
-		.well
-			markdown:
+  .span6
+    h2 Before you contact us
+    .well
+      markdown:
 
-				1. Visit the [self-diagnostics page](/plugins/diagnostics) on your server: `/resizer.debug.ashx`
-				2. Enable [detailed error messages, and visit the image URL directly](/docs/geterror)
-				3. Skim the comprehensive [troubleshooting guide](/docs/troubleshoot) and [faq](/docs/faq). If it's a *how-to* question, [try reading the documentation](/docs), [searching this site](/search), and [searching Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer).
+        1. Visit the [self-diagnostics page](/plugins/diagnostics) on your server: `/resizer.debug.ashx`
+        2. Enable [detailed error messages, and visit the image URL directly](/docs/geterror)
+        3. Skim the comprehensive [troubleshooting guide](/docs/troubleshoot) and [faq](/docs/faq). If it's a *how-to* question, [try reading the documentation](/docs), [searching this site](/search), and [searching Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer).
 
-			hr
-			markdown:
-				When contacting support about a problem, *please* include (a) the [diagnostics page output](/plugins/diagnostics), and (b) [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror). **Without this information, we cannot diagnose the problem**.
+      hr
+      markdown:
+        When contacting support about a problem, *please* include (a) the [diagnostics page output](/plugins/diagnostics), and (b) [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror). **Without this information, we cannot diagnose the problem**.
 
-		markdown:
-			### Helpful Links
+    markdown:
+      ### Helpful Links
 
-			* [Troubleshooting Guide](/docs/troubleshoot)
-			* [Frequently Asked Questions](/docs/faq)
-			* [Stack Overflow: ImageResizer](http://stackoverflow.com/questions/tagged/imageresizer)
-			* [UserVoice: ImageResizer](http://resizer.uservoice.com/forums/108373-image-resizer-v3)
-			* [How to view the diagnostics page](/plugins/diagnostics)
-			* [How to enable detailed error messages](/docs/geterror)
-			* [Documentation - Index](/docs)
-			* [Documentation - Search](/search)
+      * [Troubleshooting Guide](/docs/troubleshoot)
+      * [Frequently Asked Questions](/docs/faq)
+      * [Stack Overflow: ImageResizer](http://stackoverflow.com/questions/tagged/imageresizer)
+      * [UserVoice: ImageResizer](http://resizer.uservoice.com/forums/108373-image-resizer-v3)
+      * [How to view the diagnostics page](/plugins/diagnostics)
+      * [How to enable detailed error messages](/docs/geterror)
+      * [Documentation - Index](/docs)
+      * [Documentation - Search](/search)
 
-	.span6
-		h2 Priority Support
-		.hero-unit
-			h3
-				| Save money and time with our new Support Contract Options
-			p: a.btn.btn-success href="/support/contracts" Learn more &raquo;
+  .span6
+    h2 Support Contracts
+    .hero-unit
+      h3
+        | Save time and money with a Support Contract
+      p 
+        | Get guaranteed response times, hotfix windows, custom development, and preventative consulting with a Support Contract. Starts at +$100.
+      p: a.btn.btn-success href="/support/contracts" Learn more &raquo;
 
-		markdown:
-			Priority email, phone and TeamViewer support costs $135/incident. A [30-minute Q&A session costs $70](/support/consult), but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
 
-			It is suggested that you download and install [Team Viewer](http://teamviewer.com) on the computer in question, as remote desktop access may be required to resolve your issue.
+    h2
+      | A-la-carte support
+      
+    markdown:
+      Email, phone and TeamViewer support costs $135/incident, and must be scheduled several business days in advance. A [30-minute Q&A session costs $70](/support/consult), but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
 
-			Credit cards, PayPal, and Google Checkout are accepted.
+      It is suggested that you download and install [Team Viewer](http://teamviewer.com) on the computer in question, as remote desktop access may be required to resolve your issue.
 
-		form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=939690&amp;cl=41912&amp;ejc=2" target="ej_ejc" method="POST" accept-charset="UTF-8"
-			| Support Type
-			br
-			select name="o1"
-				option value="30 Minute QA" 30 Minute Q&A ($70)
-				option value="1 Aided Install and a 30 Minute QA" 1 Aided install + 30 Minute Q&amp;A ($130)
-				option value="2 Aided Installs and a 30 Minute QA" 2 Aided installs + 30 Minute Q&amp;A ($190)
-				option value="1 Support Incident" 1 Support Incident ($135)
+      Credit cards, PayPal, and Google Checkout are accepted.
 
-			br
-			input type="image" src="http://www.e-junkie.com/ej/ej_add_to_cart.gif" alt="Add to Cart" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this.parentNode);"
+    form action="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;i=939690&amp;cl=41912&amp;ejc=2" target="ej_ejc" method="POST" accept-charset="UTF-8"
+      | Support Type
+      br
+      select name="o1"
+        option value="30 Minute QA" 30 Minute Q&A ($70)
+        option value="1 Support Incident" 1 Support Incident ($135)
 
-			a href="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;cl=41912&amp;ejc=2" target="ej_ejc" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this);"
-				img src="http://www.e-junkie.com/ej/ej_view_cart.gif" alt="View Cart"
+      br
+      input type="image" src="http://www.e-junkie.com/ej/ej_add_to_cart.gif" alt="Add to Cart" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this.parentNode);"
 
-		javascript:
-			function EJEJC_lc(th) { return false; }
-		script src='http://www.e-junkie.com/ecom/box.js'
+      a href="https://www.e-junkie.com/ecom/gb.php?c=cart&amp;cl=41912&amp;ejc=2" target="ej_ejc" class="ec_ejc_thkbx" onClick="javascript:return EJEJC_lc(this);"
+        img src="http://www.e-junkie.com/ej/ej_view_cart.gif" alt="View Cart"
 
-		h2 You may already qualify for Priority Support if you..
+    javascript:
+      function EJEJC_lc(th) { return false; }
+    script src='http://www.e-junkie.com/ecom/box.js'
 
-		markdown:
-			* Have [an active support contract](/support/contracts)
-			* Purchased your license before Apr. 20th, 2012
-			* Purchased your license before Feb. 1st, 2013, and have never used the one (1) included incident.
-			* Are an open-source developer leveraging the ImageResizing.NET project in another open-source project
-			* Have blogged about the project and referred at least 300 visitors
+    h2 You may already qualify for support if you..
+
+    markdown:
+      * Have [an active support contract](/support/contracts)
+      * Purchased your license before Apr. 20th, 2012
+      * Purchased your license before Feb. 1st, 2013, and have never used the one (1) included incident.
+      * Are an open-source developer leveraging the ImageResizing.NET project in another open-source project
+      * Have blogged about the project and referred at least 300 visitors
 
 hr
 .row
-	.span6
+  .span6
 
-		h2 id="bugbounty" Bug bounty program
-		markdown:
-			We offer free support for all *bug-related* inquiries through e-mail (**support@imageresizing.net**) and [Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer).
+    h2 id="bugbounty" Bug bounty program
+    markdown:
+      We offer free support for all *bug-related* inquiries through e-mail (**support@imageresizing.net**) and [Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer).
 
-			We will also PayPal you between $5 and $50 for each bug you report if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
+      We will also PayPal you between $5 and $50 for each bug you report if you're the first to report it, and if it's in the latest version of one of our ImageResizer.* assemblies.
 
-			The average bug reward is $15; only security holes and memory leaks are eligible for the $50 level.
+      The average bug reward is $15; only security holes and memory leaks are eligible for the $50 level.
 
-			We welcome feature requests, and everyone may [sumbit new ideas or vote for existing ones at the uservoice site](http://resizer.uservoice.com/forums/108373-image-resizer-v3).
-	.span6
-		h2 Free support on Stack Overflow
-		markdown:
-			Free support is provided for [questions posted on Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer), *if they meet the following criteria*:
+      We welcome feature requests, and everyone may [sumbit new ideas or vote for existing ones at the uservoice site](http://resizer.uservoice.com/forums/108373-image-resizer-v3).
+  .span6
+    h2 Free support on Stack Overflow
+    markdown:
+      Free support is provided for [questions posted on Stack Overflow](http://stackoverflow.com/questions/tagged/imageresizer), *if they meet the following criteria*:
 
-			1. The question is [tagged 'imageresizer'](http://stackoverflow.com/questions/tagged/imageresizer) so we can find it.
-			2. The question [includes a gist](https://gist.github.com/) with the diagnostics page output.
-			3. The question is about the URL API and [follows best praticies](/docs/best-practices).
-			4. The question is detailed enough to answer and shows some diagnostic effort.
+      1. The question is [tagged 'imageresizer'](http://stackoverflow.com/questions/tagged/imageresizer) so we can find it.
+      2. The question [includes a gist](https://gist.github.com/) with the diagnostics page output.
+      3. The question is about the URL API and [follows best praticies](/docs/best-practices).
+      4. The question is detailed enough to answer and shows some diagnostic effort.
 
-			We typically answer Stack Overflow questions within 1-2 weeks. E-mail your question URL to **support@imageresizing.net** for a faster response.
+      We typically answer Stack Overflow questions within 1-2 weeks. E-mail your question URL to **support@imageresizing.net** for a faster response.
 
-			If we take the time to provide a good answer to your question, please be courteous; mark it as the answer and vote it up. We prioritize questions from Stack Overflow users with a good reputation.
+      If we take the time to provide a good answer to your question, please be courteous; mark it as the answer and vote it up. We prioritize questions from Stack Overflow users with a good reputation.
 
 
 
