Added a link to the survey to the download page.

--- a/content/download.slim
+++ b/content/download.slim
@@ -37,6 +37,8 @@ h1
 
     markdown:
       [Show previous releases](/releases).
+    markdown:
+      **Have a moment?** [Take our five question survey](https://docs.google.com/forms/d/16WE1AW7AtfYm14vJQoHsCDsDuG344O-K1xcqHZaxbvg/viewform) and help us make ImageResizer even better.
   .span4
     markdown:
       It's only happened once (a long time ago), but if there is a security-related bug, we'll let you know - if [you've signed up for update notifications  (**extremely** low-volume)](/newsletter/signup)
