--- a/content/index.slim
+++ b/content/index.slim
@@ -221,7 +221,8 @@ h1 RESTful image processing
           p Everything we offer includes source code, and you're welcome to edit it. We reward pull requests and encourage community plugin development.
 
 .whatisir
-  h1 Dynamically create images that inspire and impress
+  h1
+    | Create dynamic images that impress and inspire.
   p
     | ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
 
