Remove useless /support/consult page

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -77,7 +77,7 @@ hr
       | A-la-carte support
       
     markdown:
-      Email, phone and TeamViewer support costs $135/incident, and must be scheduled several business days in advance. A [30-minute Q&A session costs $70](/support/consult), but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
+      Email, phone and TeamViewer support costs $135/incident, and must be scheduled several business days in advance. A 30-minute Q&A session costs $70, but (unlike) a support incident, is time-limited and only reccommended for consulting/introduction purposes.
 
       It is suggested that you download and install [Team Viewer](http://teamviewer.com) on the computer in question, as remote desktop access may be required to resolve your issue.
 
