Drafting home page banner alternative

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -206,3 +206,17 @@ span.imagespacer{
 .flexslider .slides > li {
   background-color: #fafafa;
 }
+
+
+
+.madlibs{
+  font-size: 24pt;
+  line-height:2em;
+}
+
+.ml_noun{
+  width:5em;
+  text-align: center;
+  display:inline-block;
+  border: 1px solid gray;
+}
