Work on more home page versions

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -220,3 +220,19 @@ span.imagespacer{
   display:inline-block;
   border: 1px solid gray;
 }
+
+.ourusersdo{
+  font-size: 18pt;
+  line-height:2em;
+}
+
+.home3{
+  text-align:center;
+  h1{
+    font-weight:normal;
+  }
+  h3{
+
+  }
+}
+
