Add Plugin back to top nav

--- a/content/_layout/header.slim
+++ b/content/_layout/header.slim
@@ -24,6 +24,8 @@ header
               li
                 a href="/docs" Docs
               li
+                a href="/plugins" Plugins
+              li
                 a href="/blog" Blog
               li
                 a href="/support" Support
