Added the Umbraco Hybrid Framework to the community page.

--- a/content/docs/community.slim
+++ b/content/docs/community.slim
@@ -31,6 +31,7 @@ h1 ImageResizer Community
       li: a href="http://our.umbraco.org/projects/starter-kits/ubootstrap" uBootstrap
       li: a href="http://our.umbraco.org/projects/website-utilities/eksponent-cropup" eksponent CropUp
       li: a href="http://gobasic.dk/" Go Basic - Denmark government website starter kit
+      li: a href="http://our.umbraco.org/projects/developer-tools/hybrid-framework" Umbraco Hybrid Framework
     .title: h2 Orchard Modules
     ul.star_list
       li: a href="http://imagepowertools.codeplex.com/" Image Power Tools Module for Orchard CMS (RIAPI friendly)
