--- a/content/home3.slim
+++ b/content/home3.slim
@@ -8,58 +8,70 @@ h1 ASP.NET library and image server
 
 
 .container.home3
-  h1 
-    | Add commands to image URLs to get altered versions in milliseconds.
+  .row
+    h1 
+      | Your server can prepare images 5,000 times faster than you.
+    .row
+      .container.home3img
+        img src="http://z.zr.io/ri/3s.jpg?height=200"
+    .row
+      code
+        | &lt;img src="img.jpg?height=200" />
 
 
   h2 
-    | Your web server prepares images 5,000 times faster than you. 
+    | Add commands to image URLs to get altered versions in milliseconds. 
     em Save for Web
-    |  is dead, okay?
+    |  is dead; welcome to the cutting edge.
+
+  .row
+    .span12
+      a href="download" class="btn btn-primary"
+        | Download
+  / We need a bigger download button
+  /
+    .row
+      p
+        | The stats bar will go here, just as soon as my order for adobe illustrator comes through and I can make it. Make sure it mentions "over 95,000 NuGet Downloads"
 
 hr
 
-.row
-  .span6
-    img src="http://z.zr.io/ri/3s.jpg?height=200"
-  .span6
-    code
-      | &lt;img src="img.jpg?height=200" />
-.row
-  .span6
-    img src="http://z.zr.io/ri/3s.jpg?height=200"
-  .span6
-    code
-      | &lt;img src="img.jpg?height=200" />
-  ul
-    li Compress and transcode images to speed up your website. 
-    li Interactively crop profile photos. 
-    li Resize responsively for any device.  
-    li Detect faces and red-eye for correction or cropping. 
-    li Detect and trim whitespace from product photos. 
-    li Add overlays and watermarks. 
-    li Enhance contrast and white-balance. 
-    li Any language. Any platform. Any data store. Any CMS.
-
-
-p
-  |  
-
-
-
-.row
-  .span12
-    a href="download" class="btn btn-primary"
-      | Download ImageResizer V#{latest_release.meta.shortversion}
-
-hr
-
-.row
-  / Usage
-  / Changing photo and matching HTML
-  / 
-.row
-  p
-    | Use the URL API from any language or platform. Host the HttpModule on IIS; within your app or on a separate server.
+      /This looked better in my head, and it's not responsive. Breadcrumbs: Try making these like the boxes on the original homepage, 2x2, and see how that looks.
+  .row.oddhomepageitem
+    .span8
+      h2
+        |All the Editing Tools for Your Business Needs
+      p
+        |Crop, resize, remove red-eye, add overlays, trim whitespace, feather edges… ImageResizer has numerous capabilities to free you from the photoshop-upload-test cycle so you can get back to work. See what ImageResizer can do for your business.
+    .span3
+      .icons-box
+        i.ico-white.circle-color-full.ico-tint
+  .row
+    .span3
+      .icons-box
+        i.ico-white.circle-color-full.ico-cup
+    .container.alignright.span8
+      h2
+        | Agile, Compatible, Standardized
+      p
+        |ImageResizer was designed from the beginning to suit our clients’ needs with as little adaptation as possible. That means working with your CMS, your user volume, your platform. (link) See how ImageResizer can connect with your business.
+  .row.oddhomepageitem
+    .span8
+      h2
+        |Secure and Stable
+      p
+        |Secure by default, ImageResizer protects against DDOS and XSS attacks, and minimizes attack surface with a plugin model. Unlike most imaging libraries, ImageResizer was designed for server-side use and multi-year uptimes since day 1.
+    .span3
+      .icons-box
+        i.ico-white.circle-color-full.ico-shield
+  .row
+    .span3
+      .icons-box
+        i.ico-white.circle-color-full.ico-group
+    .container.alignright.span8
+      h2
+        | Don't Take Our Word for It
+      p
+        |ImageResizer is trusted by small businesses and Fortune 500 companies alike, and our customer satisfaction is through the roof. (link) Check out some of our clients, and what they have to say about us.
 
   /Works in any context - CMS, language, data store.
