Added a few lines so I could grey some boxes and add some padding to homepage items.

--- a/content/css/less/custom.less
+++ b/content/css/less/custom.less
@@ -231,8 +231,14 @@ span.imagespacer{
   h1{
     font-weight:normal;
   }
-  h3{
-
-  }
+}
+.home3img{
+  padding: 6px;
+}
+.alignright{
+  text-align: right;
+}
+.oddhomepageitem{
+  background-color: #F4F4F4;
 }
 
