Thought about it, decided this was better, more tech-oriented wording.

--- a/content/index.slim
+++ b/content/index.slim
@@ -12,7 +12,7 @@ h1 RESTful image processing
 
 .whatisir
   h1
-    | Create dynamic images that impress and inspire.
+    | Dynamically create images that impress and inspire.
   p
     | ImageResizer provides a comprehensive set of photography tools, from powerfully simple one-command adjustments, such as white balance correction and noise removal, to cutting-edge advanced controls, such as red-eye correction, object removal, and seam carving. Have your server deliver final images to the browser in milliseconds.
 
